# log-collector

./: .envrc  Cargo.toml  Makefile  docker-compose.yml  test.csv
api/: Cargo.toml
api/src/: lib.rs
server/: Cargo.toml  Makefile
server/migrations/2021-02-20-113838_create_logs/: up.sql
server/src/: db.rs  handlers.rs  main.rs
