[package]
name = "server"
version = "0.1.0"
authors = ["kse201 <kse.201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "0.7"
api = { path = "../api"}
chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.13"
env_logger = "0.6"
failure = "0.1"
log = "0.4"
